--- a/chart/kubeapps/Chart.yaml
+++ b/chart/kubeapps/Chart.yaml
@@ -6,23 +6,23 @@ annotations:
   licenses: Apache-2.0
   images: |
     - name: kubeapps-apis
-      image: ghcr.io/sap/kubeapps-apis:v3.0.0-rc4
+      image: ghcr.io/sap/kubeapps-apis:v3.0.0-rc4-rc2
     - name: kubeapps-apprepository-controller
-      image: ghcr.io/sap/kubeapps-apprepository-controller:v3.0.0-rc4
+      image: ghcr.io/sap/kubeapps-apprepository-controller:v3.0.0-rc4-rc2
     - name: kubeapps-asset-syncer
-      image: ghcr.io/sap/kubeapps-asset-syncer:v3.0.0-rc4
+      image: ghcr.io/sap/kubeapps-asset-syncer:v3.0.0-rc4-rc2
     - name: kubeapps-dashboard
-      image: ghcr.io/sap/kubeapps-dashboard:v3.0.0-rc4
+      image: ghcr.io/sap/kubeapps-dashboard:v3.0.0-rc4-rc2
     - name: kubeapps-oci-catalog
-      image: ghcr.io/sap/kubeapps-oci-catalog:v3.0.0-rc4
+      image: ghcr.io/sap/kubeapps-oci-catalog:v3.0.0-rc4-rc2
     - name: kubeapps-pinniped-proxy
-      image: ghcr.io/sap/kubeapps-pinniped-proxy:v3.0.0-rc4
+      image: ghcr.io/sap/kubeapps-pinniped-proxy:v3.0.0-rc4-rc2
     - name: nginx
       image: ghcr.io/sap/kubeapps/bitnami-deprecated-nginx:1.29.1
     - name: oauth2-proxy
       image: ghcr.io/sap/kubeapps/bitnami-deprecated-oauth2-proxy:7.12.0
 apiVersion: v2
-appVersion: DEVEL
+appVersion: v3.0.0-rc4-rc2
 dependencies:
 - condition: packaging.flux.enabled
   name: redis
