--- a/.github/workflows/gh-pages.yml
+++ b/.github/workflows/gh-pages.yml
@@ -8,6 +8,8 @@ on:
   push:
     branches:
       - main
+    paths:
+      - 'site/**'
   workflow_dispatch: {}
 
 # Allow one concurrent deployment
