--- a/.github/workflows/helm-index.yml
+++ b/.github/workflows/helm-index.yml
@@ -1,63 +1,93 @@
-# Copyright 2022-2024 the Kubeapps contributors.
+# Copyright 2025 the Kubeapps contributors.
 # SPDX-License-Identifier: Apache-2.0
 
----
-name: Helm Index Publisher
+name: Generate Helm Repository Index
 
 on:
-  release:
-    types: [published]
   workflow_dispatch:
     inputs:
+      mode:
+        description: 'Index mode (stable or dev)'
+        required: true
+        default: 'stable'
+        type: choice
+        options:
+          - stable
+          - dev
+      full_regen:
+        description: 'Full regeneration (true to rebuild entire index)'
+        required: false
+        default: 'false'
+        type: choice
+        options:
+          - 'false'
+          - 'true'
       version:
-        description: "Only package this specific chart version (optional)"
+        description: 'Single version/tag to process (optional, leave empty for all)'
         required: false
         type: string
-      full_regeneration:
-        description: "Rebuild index.yaml from scratch and repackage all versions"
-        required: false
-        type: boolean
-        default: false
+        default: ''
 
 permissions:
   contents: write
 
 jobs:
-  publish_index:
+  generate_index:
     runs-on: ubuntu-latest
-    env:
-      GH_TOKEN: ${{ github.token }}
-      INPUT_VERSION: ${{ inputs.version }}
-      FULL_REGEN: ${{ inputs.full_regeneration }}
     steps:
       - name: Checkout repository
         uses: actions/checkout@v5
         with:
-          fetch-depth: 0
+          fetch-depth: 0  # Need full history for tags
 
       - name: Install Helm
-        run: |
-          set -eu
-          source ./script/lib/libcitools.sh
-          installHelm ${HELM_VERSION_STABLE:-v4.0.0} helm-stable
+        uses: azure/setup-helm@v4
+        with:
+          version: 'v4.0.0'
 
-      - name: Configure git identity (bot)
+      - name: Install GitHub CLI
         run: |
-          set -eu
-          git config user.name "github-actions[bot]"
-          git config user.email "41898282+github-actions[bot]@users.noreply.github.com"
+          type -p gh >/dev/null || {
+            curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | sudo dd of=/usr/share/keyrings/githubcli-archive-keyring.gpg
+            sudo chmod go+r /usr/share/keyrings/githubcli-archive-keyring.gpg
+            echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | sudo tee /etc/apt/sources.list.d/github-cli.list > /dev/null
+            sudo apt update
+            sudo apt install gh -y
+          }
 
-      - name: Publish stable helm index via script
+      - name: Install jq and yq
+        run: |
+          sudo apt-get update
+          sudo apt-get install -y jq
+          sudo wget -qO /usr/local/bin/yq https://github.com/mikefarah/yq/releases/latest/download/yq_linux_amd64
+          sudo chmod +x /usr/local/bin/yq
+
+      - name: Generate Helm repository index
         env:
-          GH_TOKEN: ${{ github.token }}
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          FULL_REGEN: ${{ inputs.full_regen }}
           INPUT_VERSION: ${{ inputs.version }}
-          FULL_REGEN: ${{ inputs.full_regeneration }}
+          DEBUG: 'false'
         run: |
           set -eu
-          bash script/helm_index_publish.sh --mode stable
+          MODE="${{ inputs.mode }}"
+          echo "Generating Helm repository index in ${MODE} mode..."
+          echo "Full regeneration: ${FULL_REGEN}"
+          if [[ -n "${INPUT_VERSION}" ]]; then
+            echo "Processing single version: ${INPUT_VERSION}"
+          fi
+          
+          bash script/helm_index_publish.sh --mode="${MODE}"
 
-      - name: Show Helm repo add instructions
+      - name: Display index summary
         run: |
-          echo "Users can run:"
-          echo "  helm repo add kubeapps https://${GITHUB_REPOSITORY_OWNER}.github.io/${GITHUB_REPOSITORY#*/}/helm"
-          echo "  helm repo update"
+          if [[ -f index.yaml ]]; then
+            echo "Generated index.yaml summary:"
+            echo "---"
+            yq eval '.entries | to_entries | .[] | .key + ": " + (.value | length | tostring) + " version(s)"' index.yaml
+            echo "---"
+            echo "Total entries: $(yq eval '.entries | length' index.yaml)"
+          else
+            echo "No index.yaml file found"
+          fi
+
