--- a/.github/workflows/release-assets.yml
+++ b/.github/workflows/release-assets.yml
@@ -10,9 +10,6 @@ on:
 permissions:
   contents: write
 
-env:
-  ASSET_NAME_PREFIX: kubeapps
-
 jobs:
   build_release_asset:
     runs-on: ubuntu-latest
@@ -20,22 +17,32 @@ jobs:
       - name: Checkout repository at tag
         uses: actions/checkout@v5
         with:
-          # Ensure we check out the exact tag that triggered the release
           ref: ${{ github.ref }}
 
-      - name: Build asset from chart using local scripts
-        id: prepare
-        shell: bash
+      - name: Install Helm
+        uses: azure/setup-helm@v4
+        with:
+          version: 'v4.0.0'
+
+      - name: Install GitHub CLI
+        run: |
+          type -p gh >/dev/null || {
+            curl -fsSL https://cli.github.com/packages/githubcli-archive-keyring.gpg | sudo dd of=/usr/share/keyrings/githubcli-archive-keyring.gpg
+            sudo chmod go+r /usr/share/keyrings/githubcli-archive-keyring.gpg
+            echo "deb [arch=$(dpkg --print-architecture) signed-by=/usr/share/keyrings/githubcli-archive-keyring.gpg] https://cli.github.com/packages stable main" | sudo tee /etc/apt/sources.list.d/github-cli.list > /dev/null
+            sudo apt update
+            sudo apt install gh -y
+          }
+
+      - name: Create release with packaged chart asset
+        env:
+          GH_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         run: |
           set -eu
           TAG="${GITHUB_REF_NAME}"
-          ASSET_PATH=$(bash script/prepare_release_asset.sh "${TAG}")
-          echo "Asset created at: ${ASSET_PATH}"
-          echo "asset_path=${ASSET_PATH}" >> "$GITHUB_OUTPUT"
-
-      - name: Upload asset to release
-        uses: softprops/action-gh-release@v2
-        with:
-          files: ${{ steps.prepare.outputs.asset_path }}
-        env:
-          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
+          KUBEAPPS_REPO="${GITHUB_REPOSITORY}"
+          
+          # The create_release.sh script will:
+          # 1. Call prepare_release_asset.sh to package the chart with helm
+          # 2. Upload the packaged chart as a release asset
+          bash script/create_release.sh "${TAG}" "${KUBEAPPS_REPO}"
