--- a/.github/workflows/helm-index-dev.yml
+++ b/.github/workflows/helm-index-dev.yml
@@ -1,4 +1,4 @@
-# Copyright 2022-2024 the Kubeapps contributors.
+# Copyright 2025 the Kubeapps contributors.
 # SPDX-License-Identifier: Apache-2.0
 
 ---
